ingress/ingress-nexusdeploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexusdeploy
  namespace: tekton
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /{PATH} 
            pathType: Prefix
            backend:
              service:
                name: el-el-nexusdeploy
                port:
                  number: 8080
